[metadata]
name = mtml
author = McDevitt lab (NYU)
# read version from package
version = attr: mtml.__version__
description = McDevitt lab supporting source code package.
# replace with contents of README.rst later
long_description = McDevitt lab supporting source code package.
long_description_content_type = text/x-rst
# assume MIT license for now
license = MIT
url = https://github.com/crb479/mcdevitt-trauma-ml
project_urls = 
    Source = https://github.com/crb479/mcdevitt-trauma-ml

[options]
# automatically include all packages and subpackages
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.15
    matplotlib>=3.3
    pandas>=1.0
    pytest>=6.0.1
    scikit-learn>=0.23
    scipy>=1.5
    xgboost>=1.3.1

# use MANIFEST.in for source distributions only (this is for wheel)
# includes some of the preprocessed data
[options.package_data]
mtml.data = files/README.rst, files/prep/*.csv